# BML

./: .gitignore  CMakeLists.txt  Makefile  README.md  window.supp
.temp/bData/: bRect.h
.temp/bSheet/: bSheet.h
.temp/bSound/: bSound.h
inc/: BML.h  bEvent.h  bFontManager.h  bRect.h  bRenderer.h  bSheet.h  bSound.h  bTexture.h  bWindow.h
scratch/: BML.h
src/: BML.cpp  bEvent.cpp  bEvent.h  bFontManager.cpp  bRect.cpp  bRenderer.cpp  bSDL.h  bSheet.cpp  bSound.cpp  bTexture.cpp  bWindow.cpp  bWindow.h
src/BML/: BML.cpp  BML.h
src/bData/: bRect.cpp  bRect.h
src/bEvent/: bEvent.cpp  bEvent.h
src/bSDL/: bSDL.cpp  bSDL.h
src/bSheet/: bSheet.cpp  bSheet.h
src/bSound/: bSound.cpp  bSound.h
src/bTexture/: bTexture.cpp  bTexture.h
src/bWindow/: bWindow.cpp  bWindow.h
tests/: windowTest.cpp
tests/resources/: MCaniHIGH-Start_walk.json  SpriteSheet2.aseprite  SpriteSheet2.json
tests/resources/NoelAssets/: MCaniHIGH-Start_walk.json
tests/src/: animationTest.cpp  eventTest.cpp  jsonTest.cpp  sheetTest.cpp  soundTest.cpp  textureTest.cpp  windowTest.cpp
